fix alignment

--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,10 @@ figure {
   max-height: 200px;
 }
 
+.speakers figure {
+  
+}
+
 .figure-caption {
   color: lightgray;
   font-size: 1.2rem !important;
@@ -303,10 +307,10 @@ a:focus {
     margin: 10px 10px;
   }
   .figure-caption-title {
-    font-size: 1.6rem !important;
+    font-size: 1.3rem !important;
   }
   .figure-caption {
-    font-size: 1.4rem !important;
+    font-size: 1.2rem !important;
   }
   figure {
     width: 25vw;
@@ -408,7 +412,6 @@ a:focus {
   flex-direction: row;
   /* padding: 0vw 20vw; */
   margin: 10px 0vw 10px 0vw;
-  align-items: center;
   justify-content: center;
 }
 
@@ -510,10 +513,10 @@ a:focus {
     margin: 10px 5px;
   }
   .figure-caption-title {
-    font-size: 2vw !important;
+    font-size: 0.9rem !important;
   }
   .figure-caption {
-    font-size: 2.5vw !important;
+    font-size: 0.7rem !important;
   }
   .figure-caption-e {
     font-size: 0.6rem !important;
